--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
+    "no-console": "off",
     "prettier/prettier": "error",
     "no-use-before-define": "off",
     "react-hooks/rules-of-hooks": "error",
@@ -38,6 +39,26 @@
       {
         "ts": "never",
         "tsx": "never"
+      }
+    ],
+    "@typescript-eslint/ban-types": [
+      "error",
+      {
+        "types": {
+          // add a custom message to help explain why not to use it
+          "Foo": "Don't use Foo because it is unsafe",
+
+          // add a custom message, AND tell the plugin how to fix it
+          "String": {
+            "message": "Use string instead",
+            "fixWith": "string"
+          },
+
+          "{}": {
+            "message": "Use object instead",
+            "fixWith": "object"
+          }
+        }
       }
     ]
   },
