--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "axios": "^0.21.1",
     "eslint-import-resolver-node": "^0.3.4",
     "polished": "^4.0.5",
     "react": "^17.0.1",
